Fixed users page alignment issue

--- a/qa-theme/Donut-theme/less/donut.less
+++ b/qa-theme/Donut-theme/less/donut.less
@@ -503,10 +503,8 @@ html, body {
 .user-box {
   margin-bottom: 20px;
   &-inner {
-    display: block;
     text-align: center;
-    .light-border();
-    border-radius: 5px;
+    border-radius: @border-radius-base;
     padding: 6px;
     min-height: 165px;
     -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)!important;
